# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
conways-game-of-life/: CMakeLists.txt  camera.h  cell.cpp  cell.h  common.h  coordinate.cpp  coordinate.h  game.cpp  game.h  main.cpp  minimal.html
conways-game-of-life/patterns/: calculator.cpp  pattern.cpp  pattern.h  turing_machine.cpp
conways-game-of-life/patterns/rle/: calculator.txt  turing.txt
